NoiseChisel and Segment: added arXiv:1909.11230 to papers to cite
arXiv:1909.11230 is the proceedings article of an invited talk I gave at
IAU Symposium 355 and describes the improvements to NoiseChisel and
Segment, it is thus necessary to cite it with the 2015 paper.

Two other minor changes were made:
  - Part of the comments in the `authors-cite.h' files of all the programs
    were outdated. This has also been corrected.
  - The MakeCatalog paper was finally published by ASPC, so the updated
    BibTeX entry is used for MakeCatalog's `--cite' output.

--- a/NEWS
+++ b/NEWS
@@ -66,6 +66,21 @@ See the end of the file for license conditions.
    - Matching of catalogs now possible using 3 coordinates (on catalogs
      generated from 3D data cubes), see book for more.
 
+  NoiseChisel:
+   - arXiv:1909.11230 added in papers to cite (with the `--cite' option):
+     this paper describes the major changes made to NoiseChisel in the last
+     10 stable releases since the 2015 paper, most importantly how Segment
+     has been separated and the new growth strategy. It is therefore
+     necessary to cite it along with the initial 2015 paper when using
+     NoiseChisel.
+
+  Segment:
+   - arXiv:1909.11230 added in papers to cite (with the `--cite' option):
+     this paper describes why Segment has been separated from NoiseChisel
+     and some important updates to it compared to the 2015 paper, it is
+     therefore necessary to cite it along with that paper when using
+     Segment.
+
   Statistics:
    --contour: compute a contour plot which can be directly fed into the
      PGFPlots package of LaTeX for plotting the contours. Support for more
